--- a/src/app/autenticacao/login/components/login/login.component.html
+++ b/src/app/autenticacao/login/components/login/login.component.html
@@ -18,7 +18,7 @@
 
     <mat-list-item fxLayoutAlign="center">
       <button mat-raised-button color ="primary"
-        [disabled]="form.invalid" (click)="logar">
+        [disabled]="form.invalid" (click)="logar()">
         Entrar
       </button>
     </mat-list-item>
